--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "react"
   ],
   "plugins": [
+    "transform-object-rest-spread",
     "transform-runtime",
     "transform-decorators-legacy",
     "transform-class-properties"
