--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
   "dependencies": {
     "abortcontroller-polyfill": "^1.1.4",
     "bulma": "^0.6.2",
-    "deepmerge": "^2.1.0",
     "es6-promise": "^4.2.4",
+    "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.5",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
+    "react-select": "^1.2.1",
+    "redux": "^3.7.2",
+    "redux-immutable": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "sprintf-js": "^1.1.1",
     "whatwg-fetch": "^2.0.4"
   },
@@ -38,6 +43,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
