--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-js-pagination": "^3.0.1",
     "react-redux": "^5.0.7",
     "react-select": "^1.2.1",
+    "react-table": "^6.8.2",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
